--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,72 @@
+# Fishery dependent data that is labelled confidential
+CONF
+
+# Dependencies for latex
+libs
+
+# Database creds
+database.csv
+
+# other file types we don't want to track
+*.xlsx
+*.xlsm
+#*.docx
+#*.html
+*.png
+*.pptx
+*.jpg
+*.svg
+
+# Windows thumbnail cache files
+Thumbs.db
+
+# TMB files
+*.o
+*.dll
+
+# R projects
 .Rproj.user
 .Rhistory
 .RData
 .Ruserdata
+*.Rproj
+*.Rdata
+
+# JAGS models
+*.jag
+
+# ADMB files
+*.cov
+*.dep
+*.hes
+*.tmp
+*.log
+*.b01
+*.bar
+*.cor
+*.cout
+*.ecm
+*.eva
+*.exe
+*.hst
+*.htp
+*.mc2
+*.mcm
+*.obj
+*.p01
+*.par
+*.psv
+*.r01
+*.rep
+*.std
+*.out
+*.ps
+sims
+dgs2
+diags
+*.b02
+*.p02
+*.prf
+*.r02
+*.plt
+*.pin
